--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -27,9 +27,6 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Form</a>
-                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
@@ -41,14 +38,16 @@
                     </ul>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Form</a>
+                </li>
               </div>
             </div>
           </nav>
-          
+        
+          <main class="container-fluid py-5 text-center">
+            {% block main %}{% endblock %}
+        </main>
     </body>
     
 </html>
