--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -14,7 +14,7 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
-        <title></title>
+        <title>Berg Insights: {% block title %}{% endblock %}</title>
 
     </head>
     
