--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -2,11 +2,9 @@
 
 {% block main %}
 
-<p>
-  adsl;kfjdas
-  fasldfkjasd\
-  akjdslf
-</p>
+<h1>
+  Today
+</h1>
 <!-- carousel -->
 
 <div class="bd-example">
