--- a/main/templates/form.html
+++ b/main/templates/form.html
@@ -12,16 +12,16 @@
     <div class="time">
         <input type="time" name="time-input" id="time-input">
 
-        <input type="radio" class="btn-check" name="time-base" id="time1" autocomplete="off">
+        <input type="radio" class="btn-check" name="time-base" id="time1" autocomplete="off" value="1">
         <label class="btn" for="time1">No wait</label>
 
-        <input type="radio" class="btn-check" name="time-base" id="time2" autocomplete="off">
+        <input type="radio" class="btn-check" name="time-base" id="time2" autocomplete="off" value="2">
         <label class="btn" for="time2">Less than 5 minutes</label>
 
-        <input type="radio" class="btn-check" name="time-base" id="time3" autocomplete="off">
+        <input type="radio" class="btn-check" name="time-base" id="time3" autocomplete="off" value="3">
         <label class="btn" for="time3">5-10 minutes</label>
 
-        <input type="radio" class="btn-check" name="time-base" id="time4" autocomplete="off">
+        <input type="radio" class="btn-check" name="time-base" id="time4" autocomplete="off" value="4">
         <label class="btn" for="time4">More than 10 minutes</label>
     </div>    
         
