--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -47,7 +47,15 @@
     </a>
   </div>
 </div>
-  
 
+<br>
+
+<h1>
+  Current Wait Time
+</h1>
+
+<h2>
+  {{ average_wait_time }}
+</h2>
 
 {% endblock %}
