--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -19,8 +19,8 @@
     </head>
     
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">LOGO</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="crimson">
+            <a class="navbar-brand" id="logo" href="/">LOGO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="hihi">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" id="hihi">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" id="options" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" id="options" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Hi</a>
+                  <a class="nav-link" id="options" href="#">Hi</a>
                 </li>
               </ul>
             </div>
