--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -20,7 +20,7 @@
     
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="crimson">
-            <a class="navbar-brand" id="logo" href="/">LOGO</a>
+            <a class="navbar-brand" id="logo" href="/"><span class="berg">Berg</span><span class="insights">Insights</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="hihi">
               <span class="navbar-toggler-icon"></span>
             </button>
