--- a/main/templates/form.html
+++ b/main/templates/form.html
@@ -12,16 +12,16 @@
     <div class="time">
         <input type="time" name="time-input" id="time-input">
 
-        <input type="radio" class="btn-check" name="time-base" id="time1" autocomplete="off" value="1">
+        <input type="radio" class="btn-check" name="time-base" id="time1" autocomplete="off" value="0">
         <label class="btn" for="time1">No wait</label>
 
-        <input type="radio" class="btn-check" name="time-base" id="time2" autocomplete="off" value="2">
+        <input type="radio" class="btn-check" name="time-base" id="time2" autocomplete="off" value="1">
         <label class="btn" for="time2">Less than 5 minutes</label>
 
-        <input type="radio" class="btn-check" name="time-base" id="time3" autocomplete="off" value="3">
+        <input type="radio" class="btn-check" name="time-base" id="time3" autocomplete="off" value="2">
         <label class="btn" for="time3">5-10 minutes</label>
 
-        <input type="radio" class="btn-check" name="time-base" id="time4" autocomplete="off" value="4">
+        <input type="radio" class="btn-check" name="time-base" id="time4" autocomplete="off" value="3">
         <label class="btn" for="time4">More than 10 minutes</label>
     </div>    
         
@@ -32,24 +32,26 @@
     </h1>
 
     <!-- Using Radio Buttons -->
+    { for entree in current_entrees}
 
-    <div class="rating">
-        <input type="radio" class="btn-check" name="rating-base" id="rating1" autocomplete="off">
-        <label class="btn" for="rating1">1</label>
-    
-        <input type="radio" class="btn-check" name="rating-base" id="rating2" autocomplete="off">
-        <label class="btn" for="rating2">2</label>
-    
-        <input type="radio" class="btn-check" name="rating-base" id="rating3" autocomplete="off">
-        <label class="btn" for="rating3">3</label>
-    
-        <input type="radio" class="btn-check" name="rating-base" id="rating4" autocomplete="off">
-        <label class="btn" for="rating4">4</label>
+        <div class="rating">
+            <input type="radio" class="btn-check" name="rating-base" id="rating1" autocomplete="off">
+            <label class="btn" for="rating1">1</label>
+        
+            <input type="radio" class="btn-check" name="rating-base" id="rating2" autocomplete="off">
+            <label class="btn" for="rating2">2</label>
+        
+            <input type="radio" class="btn-check" name="rating-base" id="rating3" autocomplete="off">
+            <label class="btn" for="rating3">3</label>
+        
+            <input type="radio" class="btn-check" name="rating-base" id="rating4" autocomplete="off">
+            <label class="btn" for="rating4">4</label>
 
-        <input type="radio" class="btn-check" name="rating-base" id="rating5" autocomplete="off">
-        <label class="btn" for="rating5">5</label>
-    </div>
-   
+            <input type="radio" class="btn-check" name="rating-base" id="rating5" autocomplete="off">
+            <label class="btn" for="rating5">5</label>
+        </div>
+    
+    {% endfor %}    
     <br>
 
     <h1>
@@ -57,7 +59,7 @@
     </h1>
 
     <div class="form-floating">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" name="floatingTextarea2" style="height: 100px"></textarea>
+        <textarea class="form-control" placeholder="Leave a comment here" id="meal-comment" name="meal-comment" style="height: 100px"></textarea>
         <label for="floatingTextarea2">Comments</label>
     </div>
 
