--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,7 @@
         <table class="table table-primary">
           <thead>
             <tr>
-              <th class="table-collumn" scope="col">DOW</th>
+              <th class="table-collumn" scope="col">{{ datesofweek[eday] }}</th>
               <th class="table-collumn" scope="col">{{ dates[eday] }}</th>
               <th class="table-collumn" scope="col">{{ meal[eday] }}</th>
             </tr>
