--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -3,7 +3,7 @@
 {% block main %}
 
 <h1>
-  Something should go here
+  This is my fanpage to Daniel
 </h1>
 <!-- carousel -->
 <!-- jinja is used to fill tables with day's food, create carousel slides for all of the days we want -->
