--- a/main/templates/form.html
+++ b/main/templates/form.html
@@ -3,6 +3,13 @@
 
 {% block main %}
 
+<script>
+     function toggleCommentBox(ratingTopic) {
+            var commentBox = document.getElementById("commentBox-" + ratingTopic);
+            commentBox.style.display = (commentBox.style.display === "none" || commentBox.style.display === "") ? "block" : "none";
+        }
+</script>
+
 <form action="/form" method="post">
 
     <h1>
@@ -32,36 +39,46 @@
     </h1>
 
     <!-- Using Radio Buttons -->
-    { for entree in current_entrees}
+        
+    {% for entree in current_entrees %}
 
         <div class="rating">
-            <input type="radio" class="btn-check" name="rating-base" id="rating1" autocomplete="off">
-            <label class="btn" for="rating1">1</label>
-        
-            <input type="radio" class="btn-check" name="rating-base" id="rating2" autocomplete="off">
-            <label class="btn" for="rating2">2</label>
-        
-            <input type="radio" class="btn-check" name="rating-base" id="rating3" autocomplete="off">
-            <label class="btn" for="rating3">3</label>
-        
-            <input type="radio" class="btn-check" name="rating-base" id="rating4" autocomplete="off">
-            <label class="btn" for="rating4">4</label>
+            <p>{{ entree }}</p>
 
-            <input type="radio" class="btn-check" name="rating-base" id="rating5" autocomplete="off">
-            <label class="btn" for="rating5">5</label>
+            <input type="radio" class="btn-check" name="{{ entree }}-rating" id="{{ entree }}-rating1" autocomplete="off" value="0">
+            <label class="btn" for="{{ entree }}-rating1">1</label>
+        
+            <input type="radio" class="btn-check" name="{{ entree }}-rating" id="{{ entree }}-rating2" autocomplete="off" value="1">
+            <label class="btn" for="{{ entree }}-rating2">2</label>
+        
+            <input type="radio" class="btn-check" name="{{ entree }}-rating" id="{{ entree }}-rating3" autocomplete="off" value="2">
+            <label class="btn" for="{{ entree }}-rating3">3</label>
+        
+            <input type="radio" class="btn-check" name="{{ entree }}-rating" id="{{ entree }}-rating4" autocomplete="off" value="3">
+            <label class="btn" for="{{ entree }}-rating4">4</label>
+
+            <input type="radio" class="btn-check" name="{{ entree }}-rating" id="{{ entree }}-rating5" autocomplete="off" value="4">
+            <label class="btn" for="{{ entree }}-rating5">5</label>
+
+            <button type="button" class="showCommentBoxBtn" onclick="toggleCommentBox('{{ entree }}')">Leave Comment</button>
         </div>
+        
+    {% endfor %}
     
-    {% endfor %}    
     <br>
 
     <h1>
         <label for="form">Any comments?</label>
     </h1>
 
-    <div class="form-floating">
-        <textarea class="form-control" placeholder="Leave a comment here" id="meal-comment" name="meal-comment" style="height: 100px"></textarea>
-        <label for="floatingTextarea2">Comments</label>
-    </div>
+    {% for entree in current_entrees %}
+
+        <div class="form-floating">
+            <textarea class="commentBox" placeholder="Leave a comment here" id="commentBox-{{ entree }}" name="commentBox-{{ entree }}" style="height: 100px"></textarea>
+            <label class="commentBox" for="commentBox-{{ entree }}"> {{ entree }}</label>
+        </div>
+
+    {% endfor %}
 
     <br>
 
