--- a/main/static/styles.css
+++ b/main/static/styles.css
@@ -13,6 +13,15 @@ label[for="form"] {
     color: #fff;
 }
 
+.btn-check {
+    display: none;
+}
+
+.commentBox {
+    display: none;
+    margin: 0 auto;
+}
+
 #hihi{
     margin-top: 8px;
     margin-left: auto;
