--- a/main/static/styles.css
+++ b/main/static/styles.css
@@ -55,6 +55,9 @@ label[for="form"] {
     font-weight: 550;
 }
 
+#table-title{
+    font-size: 40px;
+}
 
 .navbar{
     background-color: #A51C30 !important;
