--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -2,9 +2,13 @@
 
 {% block main %}
 
-<h1>
-  This is my fanpage to Daniel
-</h1>
+<table class="table table-primary">
+  <thead>
+    <tr>
+      <th class="table-collumn"  id="table-title" scope="col"> Entree Map </th>
+    </tr>
+  </thead>
+</table>
 <!-- carousel -->
 <!-- jinja is used to fill tables with day's food, create carousel slides for all of the days we want -->
 <!-- and to display the current/upcoming meal as active! -->
