--- a/final/final/templates/index.html
+++ b/final/final/templates/index.html
@@ -24,9 +24,8 @@
         <table class="table table-primary">
           <thead>
             <tr>
-              <th class="table-collumn" scope="col">{{ datesofweek[eday] }}</th>
-              <th class="table-collumn" scope="col">{{ dates[eday] }}</th>
-              <th class="table-collumn" scope="col">{{ meal[eday] }}</th>
+              <th class="table-collumn" id="mealsday" scope="col"> {{ datesofweek[eday] }}'s {{ meal[eday] }} is: </th>
+              <th class="table-collumn" id="dateofmeal" scope="col">{{ dates[eday] }}</th>
             </tr>
           </thead>
         </table>
