--- a/final/final/static/styles.css
+++ b/final/final/static/styles.css
@@ -116,5 +116,19 @@ form {
     font-variant: small-caps
 }
 
+#mealsday{
+    text-align: left;
+    font-size: 30px;
+    padding-left: 30px;
+    border: transparent !important;
+}
+
+
+#dateofmeal{
+    text-align: right;
+    font-size: 30px;
+    padding-right: 30px;
+    border: transparent !important;
+}
 html {background-color: #F2F2F2}
 body {background-color: #F2F2F2}
