--- a/final/final/templates/layout.html
+++ b/final/final/templates/layout.html
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent" id="hihi">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" id="options" href="#">Home</a>
+                  <a class="nav-link" id="options" href="/dash">BergDash</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="options" href="#">Link</a>
+                  <a class="nav-link" id="options" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="options" href="#">Hi</a>
+                  <a class="nav-link" id="options" href="/contact">Contact Us</a>
                 </li>
               </ul>
             </div>
