--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -78,12 +78,16 @@
 
 <br>
 
-<h1>
-  Projected Wait Time
-</h1>
 
-<h2>
-  {{ wait_time }}
-</h2>
+
+<div class="wait-time">
+  <h1>
+    Projected Wait Time
+  </h1>
+
+  <h2>
+    {{ wait_time }}
+  </h2>
+</div>
 
 {% endblock %}
