a few more things

--- a/final/final/templates/contact.html
+++ b/final/final/templates/contact.html
@@ -5,6 +5,7 @@
 
 {% block content %}
     <div class="container mt-5">
-        <h2 class="text-center">If you have any questions or comments, please reach out to arikaufman@college.harvard.edu</h2>
+        <h2 class="text-center">If you have any BergDash questions or comments, please reach out to arikaufman@college.harvard.edu</h2>
+        <h2 class="text-center">If you have any BergInsights questions or comments, please reach out to dylanbruckner@college.harvard.edu</h2>
     </div>
 {% endblock %}
