--- a/final/final/templates/layout.html
+++ b/final/final/templates/layout.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" id="options" href="/dash">BergDash</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="options" href="#">About</a>
+                  <a class="nav-link" id="options" href="/aboutUs">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" id="options" href="/contact">Contact Us</a>
