--- a/final/final/static/styles.css
+++ b/final/final/static/styles.css
@@ -1,21 +1,34 @@
+.time {
+    display: flex; 
+    align-items: center; 
+    margin-bottom: 10px; 
+}
+
+.time-input {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.time-input input {
+    display: inline-block;
+    margin-left: 20px;
+} 
+
 .rating {
-    display: flex; /* Use flexbox layout */
-    align-items: center; /* Align items vertically in the center */
-    margin-bottom: 30px; /* Add margin between different rating sections */
+    display: flex; 
+    align-items: center; 
+    margin-bottom: 30px; 
 }
 
 .rating label {
-    display: inline-block; /* Align labels horizontally */
-    margin-right: 50px; /* Adjust the margin between radio buttons */
+    display: inline-block; 
+    margin-right: 50px; 
+    text-align: left;
+    position: relative;
 }
 
 .showCommentBoxBtn {
-    margin-left: 10px; /* Adjust the margin for the "Leave Comment" button */
-}
-
-.rating label {
-    text-align: left;
-    position: relative;
+    margin-left: 10px; 
 }
 
 .btn-check:checked + .btn {
