--- a/final/final/templates/form.html
+++ b/final/final/templates/form.html
@@ -17,7 +17,6 @@
     </h1>
 
     <div class="time">
-        <input type="time" name="time-input" id="time-input">
 
         <input type="radio" class="btn-check" name="time-base" id="time1" autocomplete="off" value="0">
         <label class="btn" for="time1">No wait</label>
@@ -30,6 +29,11 @@
 
         <input type="radio" class="btn-check" name="time-base" id="time4" autocomplete="off" value="3">
         <label class="btn" for="time4">More than 10 minutes</label>
+        
+    </div>
+
+    <div class="time-input">
+        <p>At what time?</p> <input type="time" name="time-input" id="time-input">
     </div>
 
     <br>
