--- a/project/final/static/styles.css
+++ b/project/final/static/styles.css
@@ -136,6 +136,17 @@ form {
     border: transparent !important;
 }
 
+.wait-time{
+    width: 400px;
+    border: 10px solid #A51C30F7;
+    padding: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    background-color: #A51C3044
+}
+
+
 
 #dateofmeal{
     text-align: right;
