--- a/project/final/templates/index.html
+++ b/project/final/templates/index.html
@@ -76,13 +76,15 @@
 </div>
 
 <br>
+<div class="wait-time">
+  <h2>
+    Projected Wait Time
+  </h2>
+  
+  <h4>
+    {{ wait_time }}
+  </h4>
+</div>
 
-<h1>
-  Projected Wait Time
-</h1>
-
-<h2>
-  {{ wait_time }}
-</h2>
 
 {% endblock %}
