--- a/project/final/templates/about.html
+++ b/project/final/templates/about.html
@@ -2,7 +2,10 @@
 
 {% block main %}
 
-<div>
+<div class="about">
+    <h1 class="about-title">
+        About <span class="berg">Berg</span><span class="insights">Insights</span>
+    </h1>
     <h3>
         Founders:
     </h3>
