--- a/project/final/static/styles.css
+++ b/project/final/static/styles.css
@@ -137,7 +137,7 @@ form {
 }
 
 .wait-time{
-    width: 400px;
+    width: 300px;
     border: 5px solid #000000f7;
     padding: 0px;
     margin-left: auto;
@@ -147,7 +147,24 @@ form {
     color: white;
 }
 
+.about{
+    border: 2px solid black;
+    color: black;
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #f6092d46;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.about-title{
+    background-color: #A51C30F0;
+    color: white;
+    padding: 20px;
+    border: 2px solid black;
+    margin-bottom: 20px;
 
+}
 
 #dateofmeal{
     text-align: right;
