--- a/project/final/templates/customer.html
+++ b/project/final/templates/customer.html
@@ -14,7 +14,7 @@
         <!-- Purchase History Button -->
             <a href="{{ url_for('purchase_history') }}" class="btn btn-secondary btn-lg mb-3">View Purchase History</a>
 
-            <a href="https://www.foodpro.huds.harvard.edu/foodpro/menu_items.asp?type=30&meal=1" class="btn btn-success btn-lg mb-3" target="_blank">View Menu</a>
+            <a href="/" class="btn btn-success btn-lg mb-3" target="_blank">View Menu</a>
 
         <!-- Logout Button -->
             <a href="{{ url_for('logout') }}" class="btn btn-danger btn-lg">Logout</a>
