--- a/project/final/templates/form.html
+++ b/project/final/templates/form.html
@@ -10,11 +10,12 @@
         }
 </script>
 
+<div class="about">
 <form action="/form" method="post">
 
-    <h1>
-        <label for="form">How long did you wait?</label>
-    </h1>
+    <h2>
+        <label for="form">Wait Time?</label>
+    </h2>
 
     <div class="time">
 
@@ -22,25 +23,25 @@
         <label class="btn" for="time1">No wait</label>
 
         <input type="radio" class="btn-check" name="time-base" id="time2" autocomplete="off" value="1">
-        <label class="btn" for="time2">Less than 5 minutes</label>
+        <label class="btn" for="time2">&lt5 minutes</label>
 
         <input type="radio" class="btn-check" name="time-base" id="time3" autocomplete="off" value="2">
         <label class="btn" for="time3">5-10 minutes</label>
 
         <input type="radio" class="btn-check" name="time-base" id="time4" autocomplete="off" value="3">
-        <label class="btn" for="time4">More than 10 minutes</label>
+        <label class="btn" for="time4">10 minutes+</label>
         
     </div>
 
     <div class="time-input">
-        <p>At what time?</p> <input type="time" name="time-input" id="time-input">
+        <h4>When?</h4> <input type="time" name="time-input" id="time-input">
     </div>
 
     <br>
 
-    <h1>
+    <h2>
         <label for="form">Rate the meal!</label>
-    </h1>
+    </h2>
 
     <!-- Using Radio Buttons -->
 
@@ -71,9 +72,9 @@
 
     <br>
 
-    <h1>
+    <h2>
         <label for="form">Any comments?</label>
-    </h1>
+    </h2>
 
     {% for entree in current_entrees %}
 
@@ -97,5 +98,6 @@
     {% endfor %}
 
 </form>
+</div>
 
 {% endblock %}
