--- a/project/final/templates/index.html
+++ b/project/final/templates/index.html
@@ -85,7 +85,12 @@
     {{ wait_time }}
   </h4>
 </div>
+{% else %}
+<div class="wait-time">
+  <h2>
+    No Current Meal
+  </h2>
+</div>
 {% endif %}
-
 
 {% endblock %}
